# TianChen-RV

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  KERNEL-优化自查表.md  README.md
lib/Plugin/: CMakeLists.txt  ExtensionBundle.cpp  ExtensionPlugin.cpp  LoweringBoundary.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Plugin/: ConstructionProtocolCommonTest.cpp  OffloadExtensionPluginTest.cpp  PluginEmissionPlanTest.cpp  PluginRegistryTest.cpp  PluginVariantCostTest.cpp  PluginVariantLegalityTest.cpp  PluginVariantProposalTest.cpp  RVVBinaryPlanningTest.cpp  RVVBinarySelectedLoweringBoundaryTest.cpp  RVVBinaryVariantLegalityTest.cpp  RVVCapabilityProfileDivergenceTest.cpp  RVVExtensionPluginTest.cpp  RVVLowPrecisionLMULSelectionTest.cpp  RVVQ40Q80ShapeSelectionTest.cpp  ScalarExtensionPluginTest.cpp  TemplateExtensionPluginTest.cpp  TensorExtLiteExtensionPluginTest.cpp  ToyExtensionPluginTest.cpp  construction-protocol-common.test  offload-extension-plugin.test  plugin-emission-plan.test  plugin-registry.test  plugin-variant-cost.test  plugin-variant-legality.test  plugin-variant-proposal.test  rvv-binary-planning.test  rvv-capability-profile-divergence.test  rvv-extension-plugin.test  rvv-low-precision-lmul-selection.test  rvv-q4-0-q8-0-shape-selection.test  scalar-extension-plugin.test  template-extension-plugin.test  toy-extension-plugin.test
test/Scripts/: check-codex-serial-supervisor-prompt-contract.py  codex-serial-supervisor-prompt-contract.test  rvv-generated-bundle-abi-e2e-cmp-select-dry-run.test  rvv-generated-bundle-abi-e2e-computed-mask-standalone-reduce-add-dry-run.test  rvv-generated-bundle-abi-e2e-computed-mask-standalone-reduce-minmax-dry-run.test  rvv-generated-bundle-abi-e2e-computed-masked-indexed-gather-load-dry-run.test  rvv-generated-bundle-abi-e2e-computed-masked-indexed-scatter-store-dry-run.test  rvv-generated-bundle-abi-e2e-computed-masked-macc-add-dry-run.test  rvv-generated-bundle-abi-e2e-computed-masked-segment2-load-dry-run.test  rvv-generated-bundle-abi-e2e-computed-masked-segment2-store-dry-run.test  rvv-generated-bundle-abi-e2e-dequantize-i32-to-f32-gearbox-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-cmp-select-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-mask-select-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-mask-select-unsupported.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-mask-standalone-reduce-add-lmul-m2-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-indexed-gather-load-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-indexed-scatter-store-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-macc-add-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-macc-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-segment2-load-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-segment2-store-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-segment2-update-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-strided-input-widening-dot-reduce-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-computed-masked-widening-dot-reduce-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-indexed-gather-unit-store-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-indexed-scatter-unit-load-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-macc-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-route-entry-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-indexed-gather-load-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-load-store-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-macc-add-dry-run.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-macc-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-macc-add-lmul-m2-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-memory-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-standalone-minmax-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-standalone-reduce-add-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-standalone-reduce-max-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-standalone-reduce-min-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-masked-store-fail-closed.test  rvv-generated-bundle-abi-e2e-direct-pre-realized-runtime-scalar-cmp-select-fail-closed.test  (+129 more)
test/Support/: CapabilityModelTest.cpp  RuntimeABICallablePlanTest.cpp  capability-model.test  runtime-abi-callable-plan.test
test/Transforms/: EmissionReadinessTest.cpp  README.md  RVVLoweringBoundaryTest.cpp  VariantDispatchSynthesisTest.cpp  VariantMaterializationTest.cpp  VariantSelectionTest.cpp  check-capability-requires-invalid.mlir  check-capability-requires.mlir  emission-readiness-default.mlir  emission-readiness-rvv-builtin.mlir  emission-readiness.test  execution-planning-pipeline-builtin.mlir  execution-planning-pipeline-invalid-rvv-selected.mlir  execution-planning-pipeline-no-viable.mlir  execution-planning-pipeline-rerun-mismatch.mlir  materialize-emission-plans-default.mlir  materialize-emission-plans-rvv-builtin.mlir  plugin-variant-legality-pass-invalid.mlir  plugin-variant-legality-pass.mlir  plugin-variant-materialization-builtin.mlir  plugin-variant-materialization-empty-registry.mlir  plugin-variant-materialization-missing-anchor.mlir  plugin-variant-materialization-rerun-mismatch.mlir  rvv-lowering-boundary-builtin.mlir  (+12 more)
(+7279 files in other folders)
